# ktexteditor-tcpserver-plugin

./: CMakeLists.txt  README  README.rst  ktexteditor-tcpserver.desktop  tcpserver.cpp  tcpserver.hpp  tcpserverui.rc
